# rocket_auth_nosql

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md
examples/: mongodb.rs  redis.rs
examples/templates/: base.html.tera  index.html.tera  login.html.tera  signup.html.tera
src/: cookies.rs  error.rs  lib.rs  prelude.rs
src/config/: config.rs
src/db/: mod.rs
src/db/mongomodel/: mod.rs
src/email/: mod.rs
src/forms/: mod.rs
src/session/: mod.rs
src/session/default/: mod.rs
src/session/redis/: mod.rs
src/user/: auth.rs  mod.rs  user.rs  user_impl.rs  users.rs
